k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-scolaire
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gestion-scolaire
  template:
    metadata:
      labels:
        app: gestion-scolaire
    spec:
      containers:
      - name: flask-app
        image: hssngaga/gestion-scolaire:latest  
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
